[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk = "1.0.0-rc1"
serde = "1.0.195"
pest = "2.0"
pest_derive = "2.7.6"
unleash-yggdrasil = { version = "0.8.0" }
getrandom = { version = "0.2", features = ["js"] } # This is a transitive dependency from Ygg but we need to enable the feature to get a wasm target
unleash-types = "0.10.5"

[lib]
crate_type = ["cdylib"]
